Structuring the conditions treated page

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Sep 26 2020 05:06:26 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Sep 26 2020 10:04:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -27,10 +27,267 @@
   </div>
   <div class="conditions_treated_page">
     <div class="main_container">
+      <h2 class="section_h2">CONDITIONS TREATED</h2>
+      <div class="_2_block_row_ailment_right">
+        <div class="_2_block"></div>
+        <div class="_2_block">
+          <h3 class="ailment_h3_right">MUSCOSKELETAL, NEUROLOGICAL</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Bursitis</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Back Pain</li>
+                <li class="ailment_list_item">Neck Pain</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Knee Pain</li>
+                <li class="ailment_list_item">Foot Pain</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_2_block_row_ailment_left">
+        <div class="_2_block">
+          <h3 class="ailment_h3_left">EYE, EAR, NOSE, THROAT</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="_2_block"></div>
+      </div>
+      <div class="_2_block_row_ailment_right">
+        <div class="_2_block"></div>
+        <div class="_2_block">
+          <h3 class="ailment_h3_right">GYNECOLOGICAL, GENITOURINARY, REPRODUCTIVE</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_2_block_row_ailment_left">
+        <div class="_2_block">
+          <h3 class="ailment_h3_left">RESPIRATORY</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="_2_block"></div>
+      </div>
+      <div class="_2_block_row_ailment_right">
+        <div class="_2_block"></div>
+        <div class="_2_block">
+          <h3 class="ailment_h3_right">EMOTIONAL, PHYSCOLOGICAL</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">X</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_2_block_row_ailment_left">
+        <div class="_2_block">
+          <h3 class="ailment_h3_left">GASTROINTESTINAL</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Irritable Bowel Syndrome (IBS)</li>
+                <li class="ailment_list_item">Diarrhea</li>
+                <li class="ailment_list_item">Gastritis</li>
+                <li class="ailment_list_item">Hemorrhoids</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Colitis</li>
+                <li class="ailment_list_item">Food Allergies</li>
+                <li class="ailment_list_item">Hyperacidity</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Constipation</li>
+                <li class="ailment_list_item">Ulcers</li>
+                <li class="ailment_list_item">Abdominal Bloating</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="_2_block"></div>
+      </div>
+      <div class="_2_block_row_ailment_right">
+        <div class="_2_block"></div>
+        <div class="_2_block">
+          <h3 class="ailment_h3_right">IMMUNE</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Candida</li>
+                <li class="ailment_list_item">Fibromayalga</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Chronic Fatigue</li>
+                <li class="ailment_list_item">HIV &amp; AIDS???</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Multiple Sclerosis</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_2_block_row_ailment_left">
+        <div class="_2_block">
+          <h3 class="ailment_h3_left">DERMATOLOGICAL</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Acne</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Eczema</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Psoriasis</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="_2_block"></div>
+      </div>
+      <div class="_2_block_row_ailment_right">
+        <div class="_2_block"></div>
+        <div class="_2_block">
+          <h3 class="ailment_h3_right">CIRCULATORY</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">High Blood Pressure</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Low Blood Pressure</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">HIV and AIDS</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="_2_block_row_ailment_left">
+        <div class="_2_block">
+          <h3 class="ailment_h3_left">ADDICTION</h3>
+          <div class="_3_block_row">
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Alcohol</li>
+                <li class="ailment_list_item">Weight Loss</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Smoking</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Drug Abuse</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="_2_block"></div>
+      </div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a href="#" class="ryu_button w-button">Schedule Appointment</a>
       <div class="w-layout-grid grid">
         <ul role="list" class="list w-list-unstyled">
           <li class="ailment_list_item">Acid Reflux</li>
-          <li class="ailment_list_item">Addiction</li>
+          <li class="ailment_list_item">---Addiction</li>
           <li class="ailment_list_item">Allergies</li>
           <li class="ailment_list_item">Anxiety</li>
           <li class="ailment_list_item">Arthritis</li>
@@ -39,10 +296,10 @@
           <li class="ailment_list_item">Autoimmune Diseases</li>
           <li class="ailment_list_item">Bronchitis</li>
           <li class="ailment_list_item">Carpal Tunnel Syndrome</li>
-          <li class="ailment_list_item">Chronic Fatigue</li>
-          <li class="ailment_list_item">Colitis</li>
+          <li class="ailment_list_item">---Chronic Fatigue</li>
+          <li class="ailment_list_item">---Colitis</li>
           <li class="ailment_list_item">Common Cold</li>
-          <li class="ailment_list_item">Constipation</li>
+          <li class="ailment_list_item">---Constipation</li>
         </ul>
         <ul role="list" class="list-2 w-list-unstyled">
           <li class="ailment_list_item">Dental Pain</li>
@@ -55,7 +312,7 @@
           <li class="ailment_list_item">Facial Pralysis/Palsy/Tics</li>
           <li class="ailment_list_item">Fatigue</li>
           <li class="ailment_list_item">Fertility Problems</li>
-          <li class="ailment_list_item">Fibromyalgia</li>
+          <li class="ailment_list_item">---Fibromyalgia</li>
           <li class="ailment_list_item">Gingivitis</li>
           <li class="ailment_list_item">Headache</li>
         </ul>
@@ -67,7 +324,7 @@
           <li class="ailment_list_item">Indigestion</li>
           <li class="ailment_list_item">Infertility</li>
           <li class="ailment_list_item">Insomina</li>
-          <li class="ailment_list_item">Irritable Bowel Syndrome - IBS</li>
+          <li class="ailment_list_item">---Irritable Bowel Syndrome - IBS</li>
           <li class="ailment_list_item">Knee Pain</li>
           <li class="ailment_list_item">Low Back Pain</li>
           <li class="ailment_list_item">Menstrual Irregularities</li>
@@ -104,7 +361,7 @@
           <li class="ailment_list_item">Urinary Tract Infection</li>
           <li class="ailment_list_item">Valley Fever</li>
           <li class="ailment_list_item">Vomiting</li>
-          <li class="ailment_list_item">Weight Loss</li>
+          <li class="ailment_list_item">---Weight Loss</li>
           <li class="ailment_list_item">Wrist Pain</li>
         </ul>
       </div>
