--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Sep 26 2020 05:06:26 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Sep 26 2020 10:04:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -29,14 +29,14 @@
     <h1 class="section_h2">Team (Practitioners, Our Team, Staff, About Us?)</h1>
     <h2 class="section_h2">Dr. Jay Ryu, L.Ac., Ph.D</h2>
     <h4 class="ryu_h4">Founder and chief practitioner of Ryu Acupuncture Clinic, Inc. He has been been providing world-class care to patients across Southern California for 23+ years with superior results. More info, more info, more info, more info, more info, more info.</h4>
-    <div class="_2_block_row">
+    <div class="_2_block_row_ailment_right">
       <div class="_45_block">
         <p>Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
       </div>
       <div class="_55_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 45vw, (max-width: 767px) 48vw, 50vw" alt=""></div>
     </div>
     <div class="blue_divide"></div>
-    <div class="_2_block_row">
+    <div class="_2_block_row_ailment_right">
       <div class="_35_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="35vw" alt=""></div>
       <div class="_65_block">
         <h2 class="section_h2_left">Veronica Ryu, L.Ac.</h2>
@@ -47,7 +47,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       </div>
     </div>
-    <div class="_2_block_row">
+    <div class="_2_block_row_ailment_right">
       <div class="_35_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="35vw" alt=""></div>
       <div class="_65_block">
         <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
