--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Sep 26 2020 05:06:26 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Sep 26 2020 10:04:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -27,7 +27,7 @@
   </div>
   <div class="contact_page_section">
     <div class="main_container">
-      <div class="_2_block_row">
+      <div class="_2_block_row_ailment_right">
         <div class="_2_block">
           <div class="w-widget w-widget-map"></div>
         </div>
