--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Sep 26 2020 05:06:26 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Sep 26 2020 10:04:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@
       <h2 class="section_h2">About</h2>
       <p class="paragraph-4">Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual.Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual.</p>
       <h4 class="heading-13">Unsure about the layout here...working on it</h4>
-      <div class="_2_block_row">
+      <div class="_2_block_row_ailment_right">
         <div class="_65_block">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
@@ -176,7 +176,7 @@
     <div class="main_container">
       <h1 class="section_h2">Contact Us</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      <div class="_2_block_row">
+      <div class="_2_block_row_ailment_right">
         <div class="_2_block">
           <div class="w-widget w-widget-map"></div>
         </div>
