Added additional ailments, cleaned up flow of the conditions treated page, still working on filling up keywords and will need images for the categories

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Sep 26 2020 10:04:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Sep 26 2020 12:47:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -28,6 +28,7 @@
   <div class="conditions_treated_page">
     <div class="main_container">
       <h2 class="section_h2">CONDITIONS TREATED</h2>
+      <p>According to the National Institutes of Health, Traditional Chinese medicine (TCM) is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
       <div class="_2_block_row_ailment_right">
         <div class="_2_block"></div>
         <div class="_2_block">
@@ -35,20 +36,40 @@
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">Bursitis</li>
-              </ul>
-            </div>
-            <div class="_3_block">
-              <ul role="list">
-                <li class="ailment_list_item">Back Pain</li>
+                <li class="ailment_list_item">Arthritis</li>
+                <li class="ailment_list_item">Sciatica</li>
                 <li class="ailment_list_item">Neck Pain</li>
+                <li class="ailment_list_item">Golfer&#x27;s Elbow</li>
+                <li class="ailment_list_item">Carpal Tunnel Syndrome</li>
+                <li class="ailment_list_item">TMJ Syndrome</li>
+                <li class="ailment_list_item">Stroke</li>
+                <li class="ailment_list_item">Facial Paralysis</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
+                <li class="ailment_list_item">Bursitis</li>
+                <li class="ailment_list_item">Lower Back Pain</li>
+                <li class="ailment_list_item">Frozen Shoulder</li>
                 <li class="ailment_list_item">Knee Pain</li>
-                <li class="ailment_list_item">Foot Pain</li>
+                <li class="ailment_list_item">Headaches</li>
+                <li class="ailment_list_item">Sprains</li>
+                <li class="ailment_list_item">Nueropathies</li>
+                <li class="ailment_list_item">Autism</li>
+                <li class="ailment_list_item">Tics</li>
+              </ul>
+            </div>
+            <div class="_3_block">
+              <ul role="list">
+                <li class="ailment_list_item">Neuralgia</li>
+                <li class="ailment_list_item">Upper Back Pain</li>
+                <li class="ailment_list_item">Tennis Elbow</li>
+                <li class="ailment_list_item">Tendonitis</li>
+                <li class="ailment_list_item">Migraines</li>
+                <li class="ailment_list_item">Muscle Spasms</li>
+                <li class="ailment_list_item">Entrapment Syndrome</li>
+                <li class="ailment_list_item">Facial Paralysis</li>
+                <li class="ailment_list_item">Wrist Pain</li>
               </ul>
             </div>
           </div>
@@ -60,20 +81,23 @@
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Sinusitis</li>
+                <li class="ailment_list_item">Allergies</li>
+                <li class="ailment_list_item">Dizziness</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Sore Throat</li>
+                <li class="ailment_list_item">Ear Ache</li>
+                <li class="ailment_list_item">Vertigo</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Hay Fever</li>
+                <li class="ailment_list_item">Ear Ringing</li>
+                <li class="ailment_list_item">Meniere&#x27;s Disease</li>
               </ul>
             </div>
           </div>
@@ -87,20 +111,24 @@
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Premenstrual Syndrome (PMS)</li>
+                <li class="ailment_list_item">Infertility</li>
+                <li class="ailment_list_item">Menopause</li>
+                <li class="ailment_list_item">Erectile Dysfunction</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Menstrual Irregularities</li>
+                <li class="ailment_list_item">Breech Position</li>
+                <li class="ailment_list_item">Chronic Bladder Infection</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Endometriosis</li>
+                <li class="ailment_list_item">Fibroids</li>
+                <li class="ailment_list_item">Morning Sickness</li>
               </ul>
             </div>
           </div>
@@ -112,20 +140,20 @@
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Asthma</li>
+                <li class="ailment_list_item">Common Cold</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Emphysema</li>
+                <li class="ailment_list_item">Flu</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Bronchitis</li>
+                <li class="ailment_list_item">Pheumonia</li>
               </ul>
             </div>
           </div>
@@ -139,20 +167,18 @@
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Anxiety</li>
+                <li class="ailment_list_item">Stress</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Insomnia</li>
               </ul>
             </div>
             <div class="_3_block">
               <ul role="list">
-                <li class="ailment_list_item">X</li>
-                <li class="ailment_list_item">X</li>
+                <li class="ailment_list_item">Depression</li>
               </ul>
             </div>
           </div>
@@ -174,7 +200,8 @@
               <ul role="list">
                 <li class="ailment_list_item">Colitis</li>
                 <li class="ailment_list_item">Food Allergies</li>
-                <li class="ailment_list_item">Hyperacidity</li>
+                <li class="ailment_list_item">Hyperacidity / Acid Reflux</li>
+                <li class="ailment_list_item">Dysentery</li>
               </ul>
             </div>
             <div class="_3_block">
@@ -191,7 +218,7 @@
       <div class="_2_block_row_ailment_right">
         <div class="_2_block"></div>
         <div class="_2_block">
-          <h3 class="ailment_h3_right">IMMUNE</h3>
+          <h3 class="ailment_h3_right">IMMUNE SYSTEM</h3>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list">
@@ -283,89 +310,7 @@
         </div>
         <div class="_2_block"></div>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a href="#" class="ryu_button w-button">Schedule Appointment</a>
-      <div class="w-layout-grid grid">
-        <ul role="list" class="list w-list-unstyled">
-          <li class="ailment_list_item">Acid Reflux</li>
-          <li class="ailment_list_item">---Addiction</li>
-          <li class="ailment_list_item">Allergies</li>
-          <li class="ailment_list_item">Anxiety</li>
-          <li class="ailment_list_item">Arthritis</li>
-          <li class="ailment_list_item">Asthma</li>
-          <li class="ailment_list_item">Autism</li>
-          <li class="ailment_list_item">Autoimmune Diseases</li>
-          <li class="ailment_list_item">Bronchitis</li>
-          <li class="ailment_list_item">Carpal Tunnel Syndrome</li>
-          <li class="ailment_list_item">---Chronic Fatigue</li>
-          <li class="ailment_list_item">---Colitis</li>
-          <li class="ailment_list_item">Common Cold</li>
-          <li class="ailment_list_item">---Constipation</li>
-        </ul>
-        <ul role="list" class="list-2 w-list-unstyled">
-          <li class="ailment_list_item">Dental Pain</li>
-          <li class="ailment_list_item">Depression</li>
-          <li class="ailment_list_item">Digestive Trouble</li>
-          <li class="ailment_list_item">Dizziness</li>
-          <li class="ailment_list_item">Dysentery</li>
-          <li class="ailment_list_item">Emotional Problems</li>
-          <li class="ailment_list_item">Eye Problems</li>
-          <li class="ailment_list_item">Facial Pralysis/Palsy/Tics</li>
-          <li class="ailment_list_item">Fatigue</li>
-          <li class="ailment_list_item">Fertility Problems</li>
-          <li class="ailment_list_item">---Fibromyalgia</li>
-          <li class="ailment_list_item">Gingivitis</li>
-          <li class="ailment_list_item">Headache</li>
-        </ul>
-        <ul role="list" class="list-3 w-list-unstyled">
-          <li class="ailment_list_item">Heart Conditions</li>
-          <li class="ailment_list_item">Hiccups</li>
-          <li class="ailment_list_item">Immune System Support</li>
-          <li class="ailment_list_item">Incontinence</li>
-          <li class="ailment_list_item">Indigestion</li>
-          <li class="ailment_list_item">Infertility</li>
-          <li class="ailment_list_item">Insomina</li>
-          <li class="ailment_list_item">---Irritable Bowel Syndrome - IBS</li>
-          <li class="ailment_list_item">Knee Pain</li>
-          <li class="ailment_list_item">Low Back Pain</li>
-          <li class="ailment_list_item">Menstrual Irregularities</li>
-          <li class="ailment_list_item">Migraine</li>
-          <li class="ailment_list_item">Morning Sickness</li>
-          <li class="ailment_list_item">Nausea</li>
-        </ul>
-        <ul role="list" class="list-4 w-list-unstyled">
-          <li class="ailment_list_item">Neck Pain</li>
-          <li class="ailment_list_item">Occupational Injury</li>
-          <li class="ailment_list_item">Ostoarthritis</li>
-          <li class="ailment_list_item">Pain Management</li>
-          <li class="ailment_list_item">Personal Injury</li>
-          <li class="ailment_list_item">Pinched Nerve</li>
-          <li class="ailment_list_item">PMS</li>
-          <li class="ailment_list_item">Pneumonia</li>
-          <li class="ailment_list_item">Reproductive Problems</li>
-          <li class="ailment_list_item">Rhinitis</li>
-          <li class="ailment_list_item">Sciatica</li>
-          <li class="ailment_list_item">Seasonal Affective Disorder - SAD</li>
-          <li class="ailment_list_item">Shoulder Pain</li>
-          <li class="ailment_list_item">Sinusitis</li>
-        </ul>
-        <ul role="list" class="list-5 w-list-unstyled">
-          <li class="ailment_list_item">Sleep Disturbances</li>
-          <li class="ailment_list_item">Smoking Cessation</li>
-          <li class="ailment_list_item">Sore Throat</li>
-          <li class="ailment_list_item">Sports Injury</li>
-          <li class="ailment_list_item">Stress</li>
-          <li class="ailment_list_item">Tennis Elbow</li>
-          <li class="ailment_list_item">Tonsiillitis</li>
-          <li class="ailment_list_item">Trigeminal Neuralgia</li>
-          <li class="ailment_list_item">Upper Back Pain</li>
-          <li class="ailment_list_item">Urinary Tract Infection</li>
-          <li class="ailment_list_item">Valley Fever</li>
-          <li class="ailment_list_item">Vomiting</li>
-          <li class="ailment_list_item">---Weight Loss</li>
-          <li class="ailment_list_item">Wrist Pain</li>
-        </ul>
-      </div>
-    </div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a href="#" class="ryu_button w-button">Schedule Appointment</a></div>
   </div>
   <div class="footer_section">
     <div class="ends_container">
